refactor SMT and add ILP support